--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <table cellspacing=20>
       <tr>
-        <td><img src="selfie.jpg" alt="Picture of myself" style="width:100px;height:125px;"></td>
+        <td><img src="https://github.com/Knutsen87/cv/blob/main/Selfie.jpg?raw=true" alt="Picture of myself" style="width:100px;height:125px;"></td>
         <td>
           <h1>Dennis</h1>
           <p><em>Angehender</em> Fachentwickler für Anwendungsentwickler <strong>beim Berufsförderungswerk Dortmund</strong></p>
